@@ -1,3 +1,4 @@
+06. Sep. 2012 - amo -  changed inner and outer locking of component in worker threads; inner locking replaced by wait/notify. At the end on nonJavaFX thread a wait starts... when JavaFX application Thread finishes he notifies so execution loop can proceed. Outer loop: semaphore replaces an atomic boolean lock
 28. Aug. 2012 - amo -  Created  process to Shutdown all JacpFX correct; Created ShutdownUtil class; set name of JacpFX Threads
 26. Jun. 2012 - amo -  updated refresh behavior when switching between components
 31. Mai. 2012 - amo -  added resourceBundle and locale handling to declarative components
